--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,22 +31,22 @@
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4 md:flex">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a routerLink="/Home" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Home</a>
+            <a routerLink="/Home" routerLinkActive="active" class="text-gray-300 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Home</a>
             <a href="#"
                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Selected
               Publications</a>
-            <a routerLink="lectureNotes"
+            <a routerLink="lectureNotes" routerLinkActive="active"
                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Lecture
               Notes</a>
-            <a routerLink="/scienzeDelleCostruzioni"
+            <a routerLink="/scienzeDelleCostruzioni" routerLinkActive="active"
                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Scienze
               Delle Costruzioni</a>
-            <a routerLink="/conferences"
+            <a routerLink="/conferences" routerLinkActive="active"
                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Conferences,Symposia&Mettings</a>
-            <a routerLink="/lectureSlides"
+            <a routerLink="/lectureSlides" routerLinkActive="active"
                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Lecture
               Slides</a>
-            <a href="#"
+            <a routerLink="/noll_s" routerLinkActive="active"
                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">A
               review of Noll’s papers</a></div>
         </div>
