--- a/src/app/noll/noll.component.html
+++ b/src/app/noll/noll.component.html
@@ -1,1 +1,7 @@
-<p>noll works!</p>
+<div class="container mx-auto px-5">
+<p class="not-italic ... text-xl ... font-semibold ... text-center ... text-teal-800 ... my-5"> A review of Noll’s papers </p>
+<p class="font-medium ...">R.S. Rivlin</p>
+<a href="/assets/GioBook/rivlin.pdf">Review: The Foundations of Mechanics and Thermodynamics: Selected Papers. W. Noll, 1974.</a>
+ <img class="w-48 h-48 md:w-48 md:h-auto md:rounded-none rounded-full ml-50_5 flex-auto mb-6" src="/assets/HomeImage/image_med_hr.png" alt="Noll's"  width="512" height="512">
+</div>
+
