--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,8 +9,8 @@
     </figcaption>
   </div>
 <figure class="md:flex bg-slate-100 p-8 md:p-5 dark:bg-slate-800">
-  <img class="w-48 h-48 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="/assets/HomeImage/gioprof_med_hr-2.jpeg" alt="Giovanni Romano" width="512" height="512">
-    <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
+  <img class="w-48 h-48 md:w-48 md:h-auto md:rounded-none rounded-none mx-auto md:ml-800" src="/assets/HomeImage/gioprof_med_hr-2.jpeg" alt="Giovanni Romano" width="512" height="512">
+    <div class="pt-6 md:p-8 text-center md:text-left space-y-4 md:mr-350">
    <figcaption class="font-medium">
       <div class="text-sky-500 dark:text-sky-400  md:mr-20">
         Giovanni Romano
@@ -21,6 +21,7 @@
     </figcaption>
     </div>
   </figure>
+<div class="container mx-auto px-5">
 <p class="not-italic ... text-xl ... font-semibold ... text-center ... text-teal-800 ...">Short Curriculum Vitae</p>
 <ul class="list-outside ... list-disc">
   <li>Born: October 1st 1941.</li>
@@ -50,6 +51,5 @@
     BRAZIL, Rio de Janeiro, (Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq) e Pontificia Universidade Católica (PUC).
 
     USA (Northwestern University – Evanson – Illinois, Virginia Polytechnic Institute and State University (Virginia Tech), Blacksburg – Virginia, University of Washington, Seattle - Washington, University of California at San Diego (UCSD), San Diego – California, University of Florida, Gainesville – Florida).</li>
-
-
 </ul>
+</div>
