--- a/src/app/lecture-notes/lecture-notes.component.html
+++ b/src/app/lecture-notes/lecture-notes.component.html
@@ -1,6 +1,6 @@
 <p class="not-italic ... text-xl ... font-semibold ... text-center ... text-teal-800 ... my-5">Lecture Notes</p>
 <div class="container text-center">
-  <div class="row ms-5">
+  <div class="row" style="margin-left: 4rem !important;">
 <div class="col-2 card text-center mb-3" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">Geometry & Continuum Mechanics</h5>
