--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,9 +8,9 @@
     <figcaption class="font-medium">
     </figcaption>
   </div>
-<figure class="md:flex bg-slate-100 p-8 md:p-5 dark:bg-slate-800">
-  <img class="w-48 h-48 md:w-48 md:h-auto md:rounded-none rounded-none mx-auto md:ml-800" src="/assets/HomeImage/gioprof_med_hr-2.jpeg" alt="Giovanni Romano" width="512" height="512">
-    <div class="pt-6 md:p-8 text-center md:text-left space-y-4 md:mr-350">
+<figure class="md:flex bg-slate-100 p-8 md:p-5 dark:bg-slate-800 rounded-4">
+  <img class="w-48 h-48 md:w-48 md:h-auto md:rounded-none rounded-none md:margini_auto mIpad:ml-250 md:margini_surfaceDuo md:ml-300" src="/assets/HomeImage/gioprof_med_hr-2.jpeg" alt="Giovanni Romano" width="512" height="512">
+    <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
    <figcaption class="font-medium">
       <div class="text-sky-500 dark:text-sky-400  md:mr-20">
         Giovanni Romano
