--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,102 +1,50 @@
-<nav class="bg-gray-800">
-  <div class="mx-auto max-w-full px-2 sm:px-10 lg:px-10">
-    <div class="relative flex h-16 items-center justify-between">
-      <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <!-- Mobile menu button-->
-        <button type="button"
-                class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
-                aria-controls="mobile-menu" aria-expanded="false" (click)="clickMenuMobile()">
-          <span class="sr-only">Open main menu</span>
-          <!--
-            Icon when menu is closed.
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="over">
+    <label>My WebSite</label>
+    <hr />
+    <nav>
+      <a routerLink="/Home" (click)="clickHandler()" routerLinkActive="active"
+      >Home</a
+      >
+      <a routerLink="about" (click)="clickHandler()" routerLinkActive="active"
+      >Selected Publications</a
+      >
+      <a routerLink="/lectureNotes" (click)="clickHandler()" routerLinkActive="active"
+      >Lecture Notes</a
+      >
+      <a routerLink="/scienzeDelleCostruzioni" (click)="clickHandler()" routerLinkActive="active"
+      >Scienze Delle Costruzioni</a
+      >
+      <a routerLink="/conferences" (click)="clickHandler()" routerLinkActive="active"
+      >Conferences,Symposia&Mettings</a
+      >
+      <a routerLink="/lectureSlides" (click)="clickHandler()" routerLinkActive="active"
+      >Lecture Slides</a
+      >
+      <a routerLink="/noll_s" (click)="clickHandler()" routerLinkActive="active"
+      >A review of Noll’s papers</a
+      >
+    </nav>
+  </mat-sidenav>
 
-            Menu open: "hidden", Menu closed: "block"
-          -->
-          <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-               aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
-          </svg>
-          <!--
-            Icon when menu is open.
-
-            Menu open: "block", Menu closed: "hidden"
-          -->
-          <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-               aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
-          </svg>
-        </button>
-      </div>
-      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="hidden sm:ml-6 sm:block">
-          <div class="flex space-x-4 md:flex">
-            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a routerLink="/Home" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Home</a>
-            <a href="#"
-               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Selected
-              Publications</a>
-            <a routerLink="lectureNotes" routerLinkActive="active"
-               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Lecture
-              Notes</a>
-            <a routerLink="/scienzeDelleCostruzioni" routerLinkActive="active"
-               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Scienze
-              Delle Costruzioni</a>
-            <a routerLink="/conferences" routerLinkActive="active"
-               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Conferences,Symposia&Mettings</a>
-            <a routerLink="/lectureSlides" routerLinkActive="active"
-               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Lecture
-              Slides</a>
-            <a routerLink="/noll_s" routerLinkActive="active"
-               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">A
-              review of Noll’s papers</a></div>
-        </div>
-      </div>
-      <div class="absolute inset-y-0 right-20 flex items-center pr-5 sm:static sm:inset-auto sm:ml-20 sm:pr-0">
-        <!-- Profile dropdown -->
-        <div class="relative ml-20">
-          <div>
-            <button type="button"
-                    class="flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-                    id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-              <span class="sr-only">Open user menu</span>
-              <img class="h-11 w-11/12 rounded-full" src="/assets/HomeImage/login.png" alt=""(click)="openLogin()">
-            </button>
-          </div>
-          <div #login
-          class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
-            role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-            <!-- Active: "bg-gray-100", Not Active: "" -->
-            <a routerLink="/log-In" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Log In</a>
-            <a class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Log Out</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Mobile menu, show/hide based on menu state. -->
-  <div #menuMobile class="sm:hidden" id="mobile-menu">
-    <div class="space-y-1 px-2 pb-3 pt-2">
-      <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-      <a routerLink="/Home" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Home</a>
-      <a href="#"
-         class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Selected
-        Publications</a>
-      <a routerLink="lectureNotes" routerLinkActive="active"
-         class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Lecture
-        Notes</a>
-      <a routerLink="/scienzeDelleCostruzioni" routerLinkActive="active"
-         class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Scienze
-        Delle Costruzioni</a>
-      <a routerLink="/conferences" routerLinkActive="active"
-         class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Conferences,Symposia&Mettings</a>
-      <a routerLink="/lectureSlides" routerLinkActive="active"
-         class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Lecture
-        Slides</a>
-      <a routerLink="/noll_s" routerLinkActive="active"
-         class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">A
-        review of Noll’s papers</a>
-    </div>
-  </div>
-</nav>
-<router-outlet></router-outlet>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <header>
+        <label></label>
+        <nav>
+          <a routerLink="/Home" routerLinkActive="active">Home</a>
+          <a routerLink="about" routerLinkActive="active">Selected Publications</a>
+          <a routerLink="/lectureNotes" routerLinkActive="active">Lecture Notes</a>
+          <a routerLink="/scienzeDelleCostruzioni" routerLinkActive="active">Scienze Delle Costruzioni</a>
+          <a routerLink="/conferences" routerLinkActive="active">Conferences,Symposia&Mettings</a>
+          <a routerLink="/lectureSlides" routerLinkActive="active">Lecture Slides</a>
+          <a routerLink="/noll_s" routerLinkActive="active">A review of Noll’s papers</a>
+        </nav>
+        <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+      </header>
+    </mat-toolbar>
+    <section>
+      <router-outlet></router-outlet>
+    </section>
+  </mat-sidenav-content>
+</mat-sidenav-container>
