--- a/src/app/lecture-notes/lecture-notes.component.html
+++ b/src/app/lecture-notes/lecture-notes.component.html
@@ -1,4 +1,4 @@
-<p class="not-italic ... text-xl ... font-semibold ... text-center ... text-teal-800 ... my-5">Lecture Notes</p>
+<!--<p class="not-italic ... text-xl ... font-semibold ... text-center ... text-teal-800 ... my-5">Lecture Notes</p>
 <div class="container text-center">
   <div class="row" style="margin-left: 4rem !important;">
 <div class="col-2 card text-center mb-3" style="width: 18rem;">
@@ -34,3 +34,30 @@
     </div>
   </div>
 </div>
+-->
+<div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
+  <div
+    [fxFlex]="(100/gridColumns) + '%'"
+    fxFlex.xs="100%"
+    fxFlex.sm="33%"
+    *ngFor="let num of title"
+  >
+    <mat-card class="mat-elevation-z4 title_center">
+      <mat-card-header>
+        <mat-card-title>{{num}}</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="/assets/HomeImage/pdf.png" width="64" height="64"/>
+      <mat-card-content>
+        <p>
+          Some text content
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <div fxFlex></div>
+        <button mat-raised-button color="success">Dowload</button>
+        <div fxFlex></div>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
+
