--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -24,4 +24,8 @@
       margin-left: 150px;
     }
   }
-
+li {
+  font-size: 15px;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  color: #333;
+}
