--- a/src/app/lecture-notes/lecture-notes.component.css
+++ b/src/app/lecture-notes/lecture-notes.component.css
@@ -1,3 +1,5 @@
+/*
+
 mat-toolbar {
   justify-content: space-between;
 }
@@ -15,6 +17,49 @@ mat-toolbar {
 }
 .title_center {
   display: flex;
-  justify-content: center; /* align horizontal */
-  align-items: center; /* align vertical */
+  justify-content: center; /* align horizontal
+  align-items: center;
+}
+*/
+.card-container {
+  display: grid;
+  gap: 100px;
+}
+
+.mat-card {
+  width: 512px;
+  height: 512px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.mat-card-title {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mat-card-content {
+  flex: 1 1 300px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.mat-card-actions {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 767px) {
+  .mat-card {
+    width: 100%;
+    height: auto;
+  }
 }
