--- a/src/app/selected-publications/selected-publications.component.html
+++ b/src/app/selected-publications/selected-publications.component.html
@@ -1,1 +1,47 @@
-<p>selected-publications works!</p>
+<div class="container mx-auto px-5">
+<p class="not-italic ... text-xl ... font-semibold ... text-center ... text-teal-800 ... my-5">Selected Pubblications</p>
+<ul class="list-outside ... list-disc">
+  <li>Giovanni Romano.</li>
+   <a href="/assets/GioBook/electrodynamics-without.pdf">Electrodynamics without Lorentz force.</a>
+   <br>
+   <a href="https://arxiv.org/abs/1209.5960v3">arXiv:1209.5960v3 [physics.gen-ph].</a>
+   <p>November 10, 2021.</p>
+ <li>Giovanni Romano and Marina Diaco.</li>
+   <a href="/assets/GioBook/romano-diaco2020_article_on.pdf">On formulation of nonlocal elasticity problems.</a>
+   <p>Meccanica (2021) 56:1303–1328.</p>
+   <a href="https://link.springer.com/article/10.1007/s11012-020-01183-5">https://doi.org/10.1007/s11012-020-01183-5.</a>
+     <li>Giovanni Romano.</li>
+   <a href="/assets/GioBook/ac_beamer2013.pdf">Una teoria consistente dell'induzione elettromagnetica.</a>
+   <p>Accademia di Scienze Fisiche e Matematiche della Società Nazionale di Scienze, Lettere ed Arti in Napoli, 1 febbraio (2013)</p>
+ <li>Giovanni Romano.</li>
+   <a href="/assets/GioBook/beamer_unina.pdf">The Geometric Approach to Non-Linear Continuum Mechanics.</a>
+   <p>Dottorato di Ricerca in Ingegneria delle Costruzioni, Università di Napoli Federico II, Seminari del 27–29, Giugno e 2 Luglio 2012</p>
+   <li>Giovanni Romano.</li>
+   <a href="/assets/GioBook/aimeta2011.pdf">On the Geometric Approach to Non-Linear Continuum Mechanics.</a>
+   <p>General Lecture, XX Congress of the Associazione Italiana di Meccanica Teorica ed Applicata (AIMETA) Bologna, Italia, September 13 (2011)</p>
+   <li>Giovanni Romano and Raffaele Barretta.</li>
+   <a href="/assets/GioBook/milano_ppt_2011.pdf">The G-Factor Impact in Non-Linear Continuum Mechanics.</a>
+   <p>Dottorato di Ricerca in Ingegneria Strutturale, Sismica e Geotecnica (DrISSG), Dipartimento di Ingegneria Strutturale DIS - Politecnico di Milano, Politecnico di Milano, Milano, Italia, June 28 (2011)</p>
+   <li>Giovanni Romano and Raffaele Barretta.</li>
+   <a href="/assets/GioBook/cosenza_8apr2011.pdf">Geometria della Meccanica del continuo: innovazioni metodologiche e computazionali.</a>
+   <p>Dipartimento di Strutture - Università della Calabria, Arcavacata di Rende Cosenza, 8 Aprile 2011.</p>
+   <li>Giovanni Romano and Raffaele Barretta.</li>
+   <a href="/assets/GioBook/cirm2010.pdf">The Covariance Paradigm in Nonlinear Continuum Mechanics.</a>
+   <p>Centro Internazionale per la Ricerca Matematica (C.I.R.M.) - Trento. XXV International Workshop on Differential Geometric Methods in Theoretical Mechanics. Hotel Cristallo, Levico Terme (Trento), Italy, August 22-28 (2010)</p>
+   <li>Giovanni Romano and Raffaele Barretta.</li>
+   <a href="/assets/GioBook/cirm2009.pdf">Variational Principles and Constraints in Continuum Dynamics.</a>
+   <p>Centro Internazionale per la Ricerca Matematica (C.I.R.M.) - Trento. XXIV International Workshop on Differential Geometric Methods in Theoretical Mechanics. Grand Hotel Bellavista, Levico Terme, Italy, August 24-30 (2009)</p>
+   <li>Giovanni Romano and Raffaele Barretta.</li>
+   <a href="/assets/GioBook/gma2008.pdf">Cosserat materials? no thanks.</a>
+   <p>GMA 2008 Meeting of the Material Group of AIMETA, Facolty of Architecture, Genova, Italy, February 29 - March 1 (2008)</p>
+     <li>Giovanni Romano and Raffaele Barretta.</li>
+   <a href="/assets/GioBook/stamm2008.pdf">The First Principle of Thermodynamics and the Virtual Temperatures Theorem.</a>
+   <p>STAMM 2008 Symposium on Trends in Applications of Mathematics to Mechanics. Grand Hotel Bellavista, Levico Terme (Trento), Italy, September 22-25 (2008)</p>
+     <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+   <a href="/assets/GioBook/mdp2007.pdf">Variational Principles with singularities in Geodesics, Optics and Dynamics.</a>
+   <p>International Symposium on Recent Advances in Mechanics, Dynamical Systems and Probability Theory, MDP-2007, Palermo, June 3-6 (2007)</p>
+</ul>
+
+</div>
+
+
