--- a/src/app/lecture-notes/lecture-notes.component.html
+++ b/src/app/lecture-notes/lecture-notes.component.html
@@ -36,7 +36,7 @@
     </mat-card-actions>
   </mat-card>
 
-  <mat-card>
+  <mat-card style="margin-bottom:30px">
     <mat-card-header>
       <mat-card-title>Teoria delle Strutture</mat-card-title>
     </mat-card-header>
