--- a/src/app/selected-publications/selected-publications.component.html
+++ b/src/app/selected-publications/selected-publications.component.html
@@ -10,36 +10,86 @@
    <a href="/assets/GioBook/romano-diaco2020_article_on.pdf">On formulation of nonlocal elasticity problems.</a>
    <p>Meccanica (2021) 56:1303–1328.</p>
    <a href="https://link.springer.com/article/10.1007/s11012-020-01183-5">https://doi.org/10.1007/s11012-020-01183-5.</a>
-     <li>Giovanni Romano.</li>
-   <a href="/assets/GioBook/ac_beamer2013.pdf">Una teoria consistente dell'induzione elettromagnetica.</a>
-   <p>Accademia di Scienze Fisiche e Matematiche della Società Nazionale di Scienze, Lettere ed Arti in Napoli, 1 febbraio (2013)</p>
- <li>Giovanni Romano.</li>
-   <a href="/assets/GioBook/beamer_unina.pdf">The Geometric Approach to Non-Linear Continuum Mechanics.</a>
-   <p>Dottorato di Ricerca in Ingegneria delle Costruzioni, Università di Napoli Federico II, Seminari del 27–29, Giugno e 2 Luglio 2012</p>
-   <li>Giovanni Romano.</li>
-   <a href="/assets/GioBook/aimeta2011.pdf">On the Geometric Approach to Non-Linear Continuum Mechanics.</a>
-   <p>General Lecture, XX Congress of the Associazione Italiana di Meccanica Teorica ed Applicata (AIMETA) Bologna, Italia, September 13 (2011)</p>
+     <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <p>Iterative methods for nonlocal elasticity problems</p>
+   <a href="/assets/GioBook/romano2019_article_iterativ.pdf">Continuum Mech. Thermodyn. (2019) 31: 669.</a>
+  <a href="https://link.springer.com/article/10.1007/s00161-018-0717-8f">https://doi.org/10.1007/s00161-018-0717-8.</a>
+ <li>Giovanni Romano, Raimondo Luciano, Raffaele Barretta, Marina Diaco.</li>
+  <p>Nonlocal integral elasticity in nanostructures, mixtures, boundary effects and limit behaviours</p>
+   <a href="https://link.springer.com/article/10.1007/s00161-018-0631-0">Continuum Mechanics and Thermodynamics (First Online 14 February 2018), 1-15.</a>
+   <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <p>The notion of elastic state and application to nonlocal models</p>
+   <a href="/assets/GioBook/aimeta2017_vol-iii_1145.pdf">Proceedings AIMETA 2017 vol. III, 1156–1156.</a>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <p>A geometric rationale for invariance, covariance and constitutive relations</p>
+   <a href="https://link.springer.com/article/10.1007/s00161-017-0595-5">Continuum Mechanics and Thermodynamics 30(1) 175--194 (2018).</a>
+
+   <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+   <a href="/assets/GioBook/on-the-role-of-control-2.pdf">On the role of control windows in continuum dynamics.</a>
+   <p>Acta Mechanica. First Online 23 December 2017.</p>
+  <a href="https://link.springer.com/article/10.1007/s00707-017-2050-x">http://dx.doi.org/10.1007/s00707-017-2050-x.</a>
+   <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+   <a href="/assets/GioBook/on-nonlocal-integral-models.pdf">On nonlocal integral models for elastic nano-beams.</a>
+   <p>International Journal of Mechanical Sciences 131–132 (2017) 490–499 </p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0020740316308694?via%3Dihub">On nonlocal integral models for elastic nano-beams.</a>
+   <li>Giovanni Romano, Raffaele Barretta.</li>
+   <a href="/assets/GioBook/nonlocal-elasticity-in-nano.pdf">Nonlocal elasticity in nanobeams: the stress-driven integral model.</a>
+   <p>International Journal of Engineering Sciences 115 (2017) 14–27.</p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0020722516306188?via%3Dihub">http://dx.doi.org/10.1016/j.ijengsci.2017.03.002</a>
    <li>Giovanni Romano and Raffaele Barretta.</li>
-   <a href="/assets/GioBook/milano_ppt_2011.pdf">The G-Factor Impact in Non-Linear Continuum Mechanics.</a>
-   <p>Dottorato di Ricerca in Ingegneria Strutturale, Sismica e Geotecnica (DrISSG), Dipartimento di Ingegneria Strutturale DIS - Politecnico di Milano, Politecnico di Milano, Milano, Italia, June 28 (2011)</p>
-   <li>Giovanni Romano and Raffaele Barretta.</li>
-   <a href="/assets/GioBook/cosenza_8apr2011.pdf">Geometria della Meccanica del continuo: innovazioni metodologiche e computazionali.</a>
-   <p>Dipartimento di Strutture - Università della Calabria, Arcavacata di Rende Cosenza, 8 Aprile 2011.</p>
-   <li>Giovanni Romano and Raffaele Barretta.</li>
-   <a href="/assets/GioBook/cirm2010.pdf">The Covariance Paradigm in Nonlinear Continuum Mechanics.</a>
-   <p>Centro Internazionale per la Ricerca Matematica (C.I.R.M.) - Trento. XXV International Workshop on Differential Geometric Methods in Theoretical Mechanics. Hotel Cristallo, Levico Terme (Trento), Italy, August 22-28 (2010)</p>
-   <li>Giovanni Romano and Raffaele Barretta.</li>
-   <a href="/assets/GioBook/cirm2009.pdf">Variational Principles and Constraints in Continuum Dynamics.</a>
-   <p>Centro Internazionale per la Ricerca Matematica (C.I.R.M.) - Trento. XXIV International Workshop on Differential Geometric Methods in Theoretical Mechanics. Grand Hotel Bellavista, Levico Terme, Italy, August 24-30 (2009)</p>
-   <li>Giovanni Romano and Raffaele Barretta.</li>
-   <a href="/assets/GioBook/gma2008.pdf">Cosserat materials? no thanks.</a>
-   <p>GMA 2008 Meeting of the Material Group of AIMETA, Facolty of Architecture, Genova, Italy, February 29 - March 1 (2008)</p>
-     <li>Giovanni Romano and Raffaele Barretta.</li>
-   <a href="/assets/GioBook/stamm2008.pdf">The First Principle of Thermodynamics and the Virtual Temperatures Theorem.</a>
-   <p>STAMM 2008 Symposium on Trends in Applications of Mathematics to Mechanics. Grand Hotel Bellavista, Levico Terme (Trento), Italy, September 22-25 (2008)</p>
-     <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
-   <a href="/assets/GioBook/mdp2007.pdf">Variational Principles with singularities in Geodesics, Optics and Dynamics.</a>
-   <p>International Symposium on Recent Advances in Mechanics, Dynamical Systems and Probability Theory, MDP-2007, Palermo, June 3-6 (2007)</p>
+   <a href="/assets/GioBook/stress_driven_int_model_rb_.pdf">Stress-driven versus strain-driven nonlocal integral model for elastic nano-beams.</a>
+   <p>Composites Part B (2017)</p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S1359836816330074?via%3Dihub">http://dx.doi.org/10.1016/j.compositesb.2017.01.008 </a>
+     <li>Giovanni Romano, Raffaele Barretta, Marina Diaco, Francesco Marotti de Sciarra.</li>
+  <p>Constitutive boundary conditions and paradoxes in nonlocal elastic nanobeams</p>
+  <p>International Journal of Mechanical Sciences 121 (2017) 151–156.</p>
+   <a href="https://www.sciencedirect.com/science/article/abs/pii/S002074031630577X?via%3Dihub">http://dx.doi.org/10.1016/j.ijmecsci.2016.10.036 </a>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+   <a href="/assets/GioBook/solid-fluid-interaction.pdf">Solid–fluid interaction: a continuum mechanics assessment.</a>
+   <p>Acta Mechanica 228 (2017) 851–869.</p>
+  <a href="https://link.springer.com/article/10.1007/s00707-016-1738-7">http://dx.doi.org/10.1007/s00707-016-1738-7 </a>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <p>Comment on the paper “Exact solution of Eringen’s nonlocal integral model for bending of Euler–Bernoulli and Timoshenko beams” by Meral Tuna & Mesut Kirca.</p>
+  <p>International Journal of Engineering Science 109 (2016) 240–242.</p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0020722516305596?via%3Dihub">http://dx.doi.org/10.1016/j.ijengsci.2016.09.009</a>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0020722516305596?via%3Dihub">Micromorphic continua: non-redundant formulations.</a>
+  <p>Continuum Mechanics and Thermodyninamics (2016) 28:1659–1670.</p>
+  <a href="https://link.springer.com/article/10.1007/s00161-016-0502-5">https://link.springer.com/article/10.1007/s00161-016-0502-5</a>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <a href="/assets/GioBook/accademia_geodyna_2015.pdf">Geometric Action Principles in Classical Dynamics.</a>
+  <p>Atti Accademia Nazionale Scienza Lettere ed Arti in Napoli, 1–45, January 2015.</p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/innsbruck_2014.pdf">Geometry & Continuum Mechanics.</a>
+  <p>Short Course in Innsbruck, 24–25, November 2014.</p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/accademia_timelength_2014.pdf">On Time and Length in Special Relativity.</a>
+  <p>Atti Accademia Nazionale Scienza Lettere ed Arti in Napoli, 1–26, May 2014.</p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/accademia_feyn_2014.pdf">Beyond Feynman troubles in Electromagnetics.</a>
+  <p>Atti Accademia Nazionale Scienza Lettere ed Arti in Napoli, 1–31, April 2014.</p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/accademia_feyn_2014.pdf">Beyond Feynman troubles in Electromagnetics.</a>
+  <p>Atti Accademia Nazionale Scienza Lettere ed Arti in Napoli, 1–31, April 2014.</p>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/accademia_curvature_2014.pdf">On natural derivatives and the curvature formula in fibre bundles.</a>
+  <p>Atti Accademia Nazionale Scienza Lettere ed Arti in Napoli, 1–13, June 2014.<br>arXiv:1107.1705</p>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <a href="/assets/GioBook/acta_mech_elasticity_2014.pdf">The geometry of nonlinear elasticity.</a>
+  <p>DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/s00707-014-1113-5">https://link.springer.com/article/10.1007/s00707-014-1113-5</a>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <a href="/assets/GioBook/meccanica_gcmech2013.pdf">Geometric Continuum Mechanics.</a>
+  <p>Meccanica, 49(1) 111–133 (2014).DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/s11012-013-9777-9">https://link.springer.com/article/10.1007/s11012-013-9777-9</a>
+  <li>Giovanni Romano, Raffaele Barretta, Marina Diaco.</li>
+  <a href="/assets/GioBook/acta_mech_rate_2013.pdf">Rate formulations in nonlinear continuum mechanics.</a>
+  <p>Acta Mech. 225(6) 1625–1648 (2013). DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/s00707-013-1002-3">https://link.springer.com/article/10.1007/s00707-013-1002-3</a>
+  <li>Giovanni Romano, Raffaele Barretta.</li>
+  <a href="/assets/GioBook/acta_mech_euler_2013.pdf">On Euler stretching formula in continuum mechanics.</a>
+  <p>Acta Mech. 224(1) 211–230 (2013). DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/s00707-012-0746-5">https://link.springer.com/article/10.1007/s00707-012-0746-5</a>
 </ul>
 
 </div>
