--- a/src/styles.css
+++ b/src/styles.css
@@ -41,10 +41,10 @@ html, body {
   border-radius: 5px;
 }
 .mat-sidenav-container .mat-sidenav nav a:hover {
-  color: yellow;
+  color:darkgray;
 }
 .mat-sidenav-container .mat-sidenav nav a.active {
-  color: yellow;
+  color: darkgray;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -77,10 +77,10 @@ html, body {
 }
 
 .mat-sidenav-container .mat-sidenav-content .mat-toolbar header nav a:hover {
-  color: yellow;
+  color: darkgray;
 }
 .mat-sidenav-container .mat-sidenav-content .mat-toolbar header nav a.active {
-  color: yellow;
+  color: darkgray;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
