--- a/src/app/conferences/conferences.component.css
+++ b/src/app/conferences/conferences.component.css
@@ -2,4 +2,6 @@ li {
   font-size: 15px;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   color: #333;
+  font-weight: bold;
+  margin-top: 20px;
 }
