--- a/src/app/lecture-slides/lecture-slides.component.css
+++ b/src/app/lecture-slides/lecture-slides.component.css
@@ -2,4 +2,9 @@ li {
   font-size: 15px;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   color: #333;
+  font-weight: bold;
+  margin-top: 20px;
+}
+p{
+  color: green;
 }
