--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
           <a routerLink="/scienzeDelleCostruzioni" routerLinkActive="active">Scienze Delle Costruzioni</a>
           <a routerLink="/conferences" routerLinkActive="active">Conferences,Symposia&Mettings</a>
           <a routerLink="/lectureSlides" routerLinkActive="active">Lecture Slides</a>
-          <a routerLink="/noll_s" routerLinkActive="active">A review of Noll’s papers</a>
+          <a routerLink="/noll_s" routerLinkActive="active">A Review Of Noll’s Papers</a>
         </nav>
         <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
       </header>
