--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -27,5 +27,7 @@
 li {
   font-size: 15px;
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  color: #333;
+  color: green;
+  margin-top: 10px;
 }
+
