--- a/src/app/selected-publications/selected-publications.component.html
+++ b/src/app/selected-publications/selected-publications.component.html
@@ -90,6 +90,26 @@
   <a href="/assets/GioBook/acta_mech_euler_2013.pdf">On Euler stretching formula in continuum mechanics.</a>
   <p>Acta Mech. 224(1) 211–230 (2013). DOI:<br></p>
   <a href="https://link.springer.com/article/10.1007/s00707-012-0746-5">https://link.springer.com/article/10.1007/s00707-012-0746-5</a>
+  <li>Giovanni Romano, Raffaele Barretta.</li>
+  <a href="/assets/GioBook/ijnlm_ctf_2013_author.pdf">Geometric Constitutive Theory and Frame Invariance.</a>
+  <p>Int. J. Non-Linear Mech.(51)75–86. (2013) DOI:<br></p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0020746212001990?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/S0020746212001990?via%3Dihub</a>
+
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/accademia_entang_2013.pdf">On Electromagnetic Entanglements under Changes of Frame.</a>
+  <p>Atti Accademia Nazionale Scienza Lettere ed Arti in Napoli, 1–20, February 2013.<br></p>
+  <li>Giovanni Romano, Annalisa Barretta, Raffaele Barretta.</li>
+  <a href="/assets/GioBook/ejms_beams2012.pdf">On Torsion and Shear of Saint-Venant Beams.</a>
+  <p>Eur. J. Mech. A-Solids (35) 47–60 (2012) DOI:<br></p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0997753812000095?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/S0997753812000095?via%3Dihub</a>
+  <li>Giovanni Romano, Raffaele Barretta.</li>
+  <a href="/assets/GioBook/ejms_covhypo2011.pdf">Covariant Hypo-elasticity.</a>
+  <p>Eur.J.Mech.A-Solids(30)1012–1023(2011)DOI:<br></p>
+  <a href="https://linkinghub.elsevier.com/retrieve/pii/S0997753811000714">https://linkinghub.elsevier.com/retrieve/pii/S0997753811000714</a>
+  <li>Giovanni Romano.</li>
+  <a href="/assets/GioBook/electrolaws_2011.pdf">On the Laws of Electromagnetic Induction.</a>
+  <p>67 (2011) arXiv:1105.3340.<br></p>
+
 </ul>
 
 </div>
