--- a/src/app/selected-publications/selected-publications.component.html
+++ b/src/app/selected-publications/selected-publications.component.html
@@ -109,7 +109,45 @@
   <li>Giovanni Romano.</li>
   <a href="/assets/GioBook/electrolaws_2011.pdf">On the Laws of Electromagnetic Induction.</a>
   <p>67 (2011) arXiv:1105.3340.<br></p>
-
+   <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+  <a href="/assets/GioBook/mrc_algorithmic2010.pdf">Algorithmic tangent stiffness in elastoplasticity and elastoviscoplasticity.</a>
+  <p>Mech.Res.Com. 37(6) 289–292 (2010).DOI:<br></p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0093641310000200?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/S0093641310000200?via%3Dihub.</a>
+   <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+  <a href="/assets/GioBook/jmp_contdyn2009.pdf">On Continuum Dynamics.</a>
+  <p>J. Math. Phys. (50)102903 1–26 (2009). DOI:<br></p>
+  <a href="https://pubs.aip.org/aip/jmp/article-abstract/50/10/102903/985181/On-continuum-dynamics?redirectedFrom=fulltext">https://pubs.aip.org/aip/jmp/article-abstract/50/10/102903/985181/On-continuum-dynamics?redirectedFrom=fulltext.</a>
+   <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+  <a href="/assets/GioBook/mrc_algorithmic2010.pdf">Variational Formulation of the First Principle of Continuum Thermodynamics.</a>
+  <p>Cont. Mech. Thermodyn. 22(3) 177–187 (2010). DOI:<br></p>
+  <a href="https://link.springer.com/article/10.1007/s00161-009-0119-z">https://link.springer.com/article/10.1007/s00161-009-0119-z.</a>
+   <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+  <a href="/assets/GioBook/ijnlm_gendyn_2009.pdf">On the general form of the law of dynamics.</a>
+  <p>Int.J.Non-Linear Mech.44(6) 689–695. DOI:<br></p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0020746209000419?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/S0020746209000419?via%3Dihub.</a>
+     <li>Giovanni Romano, Raffaele Barretta and Annalisa Barretta.</li>
+  <a href="/assets/GioBook/rmp_maupertuis2009.pdf">On Maupertuis principle in dynamics.</a>
+  <p>Reports on Mathematical Physics 63(3) 331–346 (2009).DOI:<br></p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0034487709000159?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/S0034487709000159?via%3Dihub.</a>
+      <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+  <a href="/assets/GioBook/rmp_maupertuis2009.pdf">The general law of dynamics in nonlinear manifolds and Noether theorem.</a>
+  <p>Memorie Accademia di Scienze Fisiche e Matematiche,Mathematical Physics Models and Engineering Sciences,Liguori, Napoli (2008) 439–453, ISBN-13978-88-207-4057-3<br></p>
+<li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+  <a href="/assets/GioBook/cimne_barcelona2007.pdf">Basic issues in phase transition theory and fracture mechanics.</a>
+  <p>Variational Formulations in Mechanics: Theory and Applications, Taroco , E.A. de Souza Neto and A.A. Novotny (eds),CIMNE Barcelona (2007) 263-279, ISBN 978-84-96736-32-0<br></p>
+  <li>Giovanni Romano, Carmen Sellitto, Raffaele Barretta.</li>
+  <a href="/assets/GioBook/jmms_shell2007.pdf">Nonlinear shell theory: a duality approach.</a>
+  <p>Journal of Mechanics of Materials and Structures (2)7 1207–1230 (2007)<br></p>
+   <li>Giovanni Romano, Raffaele Barretta and Marina Diaco.</li>
+  <a href="/assets/GioBook/mrc_inhomo_2006.pdf">On the theory of material inhomogeneities.</a>
+  <p>Mechanics Research Communications 33(6) 758–763 (2006) DOI:<br></p>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0093641306000474?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/S0093641306000474?via%3Dihub.</a>
+     <li>Giovanni Romano, Carmen Sellitto.</li>
+  <a href="/assets/GioBook/tamm_polarshells2004.pdf">Tangent stiffness of polar shells undergoing large displacements.</a>
+  <p>Trends and Applications of Mathematics to Mechanics, S. Rionero and G. Romano (eds), Springer, Milano (2005) 203–214, ISBN 88-470-0269-9<br></p>
+      <li>Giovanni Romano, Alessandra Romano.</li>
+  <a href="/assets/GioBook/tamm_convhomo2005.pdf">Basic issues in convex homogenization.</a>
+  <p>Trends and Applications of Mathematics to Mechanics, S. Rionero and G. Romano (eds), Springer, Milano (2005) 185–202, ISBN 88-470-0269-9<br></p>
 </ul>
 
 </div>
